# AssetAdministrationShell

./: .gitignore  CMakeLists.txt  test.cpp
src/: AdministrativeInformation.hpp  Asset.hpp  AssetAdministrationShell.hpp  Security.hpp  Submodel.hpp  View.hpp  includeCommon.hpp  includeDictionaries.hpp  includeModeling.hpp
src/common/: HasDataSpecification.hpp  HasKind.hpp  HasSemantics.hpp  Identifiable.hpp  Identifier.hpp  Qualifiable.hpp  Referable.hpp
src/common/referencing/: IdentifierType.hpp  Key.hpp  KeyType.hpp  Reference.hpp
src/common/types/: BasicTypes.hpp  Kind.hpp  LangString.hpp
src/dictionaries/: ConceptDescription.hpp  ConceptDictionary.hpp
src/modeling/: Constraint.hpp  Formula.hpp  Qualifier.hpp  SubmodelElement.hpp
src/modeling/submodelelements/: DataElement.hpp  Operation.hpp  OperationVariable.hpp  Property.hpp  RelationshipElement.hpp  SubmodelElementCollection.hpp
